# VGC_RegulationF_Metagame

./: pyproject.toml  round_list_ofi.csv  team_list_ofi.csv
Cluster-Load/: archetype.csv  fact_run_fix.csv  jaccard_cluster.jl
Extract(ScrapingAPI)/: extract_noofi.py  extract_ofi.py  fact_run_noofi.csv  fact_run_ofi.csv  round_list_noofi.csv  team_list_noofi.csv
Transform-RegF/: fact_run.parquet  round_list.parquet  team_list.parquet  transform_total.R
Transform-RegF/.Rproj.user/BDC6481B/jobs/: C986CB0B-output.json
Transform-RegF/.Rproj.user/BDC6481B/pcs/: files-pane.pper
Transform-RegF/.Rproj.user/BDC6481B/sources/prop/: B581EB4C  INDEX
Transform-RegF/.Rproj.user/BDC6481B/sources/session-4f4bb78e/: 07C56874  209C52CC  C5F72D84
Transform-RegF/.Rproj.user/shared/notebooks/: paths
